<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_committee_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ghate.congress.CommitteeInfo">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/favoff"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/favinsky" />

    <TextView
        android:text="@string/commid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/favorite"
        android:layout_alignParentStart="true"
        android:layout_marginTop="31dp"
        android:id="@+id/textView9"
        android:textStyle="normal|bold"
        android:textColor="@android:color/black" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView9"
        android:layout_alignParentEnd="true"
        android:id="@+id/committee_id" />

    <TextView
        android:text="TextView"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView12"
        android:layout_alignParentEnd="true"
        android:id="@+id/committee_name"
        android:gravity="right"/>

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView16"
        android:layout_alignParentEnd="true"
        android:id="@+id/committee_chamber" />

    <TextView
        android:text="@string/parcom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView16"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp"
        android:id="@+id/textView20"
        android:textStyle="normal|bold"
        android:textColor="@android:color/black" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView20"
        android:layout_alignParentEnd="true"
        android:id="@+id/parent_committee" />

    <TextView
        android:text="@string/comchamber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="134dp"
        android:id="@+id/textView16"
        android:layout_below="@+id/textView12"
        android:layout_alignParentStart="true"
        android:textStyle="normal|bold"
        android:textColor="@android:color/black" />

    <TextView
        android:text="@string/contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView20"
        android:layout_alignParentStart="true"
        android:layout_marginTop="26dp"
        android:id="@+id/textView24"
        android:textStyle="normal|bold"
        android:textColor="@android:color/black" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView24"
        android:layout_alignParentEnd="true"
        android:id="@+id/committee_contact" />

    <TextView
        android:text="@string/office"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView24"
        android:layout_alignParentStart="true"
        android:layout_marginTop="19dp"
        android:id="@+id/textView27"
        android:textStyle="normal|bold"
        android:textColor="@android:color/black" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView27"
        android:layout_alignParentEnd="true"
        android:id="@+id/committee_office" />

    <TextView
        android:text="@string/cname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:id="@+id/textView12"
        android:textStyle="normal|bold"
        android:textColor="@android:color/black"
        android:layout_below="@+id/textView9"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chamber_logo"
        android:layout_alignBottom="@+id/committee_chamber"
        android:layout_toStartOf="@+id/committee_chamber" />
</RelativeLayout>
