<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_legislator_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.ghate.congress.LegislatorInfo">


        <ImageView
            android:id="@+id/website"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            app:srcCompat="@drawable/w" />

        <ImageView
            android:id="@+id/twitter"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="15dp"
            android:layout_toStartOf="@+id/website"
            app:srcCompat="@drawable/t" />

        <ImageView
            android:id="@+id/facebook"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="20dp"
            android:layout_toStartOf="@+id/twitter"
            app:srcCompat="@drawable/f" />

        <ImageView
            android:id="@+id/favorite"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="18dp"
            android:layout_toStartOf="@+id/facebook"
            app:srcCompat="@drawable/favoff" />

        <ImageView
            android:id="@+id/mugshot"
            android:layout_width="140sp"
            android:layout_height="175sp"
            android:layout_below="@+id/facebook"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="23dp"
            app:srcCompat="@android:color/darker_gray" />

        <ImageView
            android:id="@+id/partylogo"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:layout_alignStart="@+id/mugshot"
            android:layout_below="@+id/mugshot"
            app:srcCompat="@android:color/darker_gray" />

        <TextView
            android:id="@+id/party"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/partylogo"
            android:layout_toStartOf="@+id/facebook"
            android:text="TextView"
            android:textSize="16sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/partylogo"
            android:layout_marginTop="30dp"
            android:layout_toStartOf="@+id/partylogo"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:padding="3dip"
                    android:text="@string/legname"
                    android:textColor="@android:color/black"
                    android:textStyle="normal|bold" />

                <TextView
                    android:id="@+id/legislator_name"
                    android:layout_gravity="right"
                    android:padding="3dip" />


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:padding="3dip"
                    android:text="@string/email"
                    android:textColor="@android:color/black"
                    android:textStyle="normal|bold" />

                <TextView
                    android:id="@+id/legislator_email"
                    android:layout_gravity="right"
                    android:autoLink="email"
                    android:padding="3dip" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:padding="3dip"
                    android:text="@string/chamber"
                    android:textColor="@android:color/black"
                    android:textStyle="normal|bold" />

                <TextView
                    android:id="@+id/legislator_chamber"
                    android:layout_gravity="right"
                    android:padding="3dip" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:padding="3dip"
                    android:text="@string/contact"
                    android:textColor="@android:color/black"
                    android:textStyle="normal|bold" />

                <TextView
                    android:id="@+id/legislator_contact"
                    android:layout_gravity="right"
                    android:autoLink="phone"
                    android:padding="3dip" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:padding="3dip"
                    android:text="@string/startterm"
                    android:textColor="@android:color/black"
                    android:textStyle="normal|bold" />

                <TextView
                    android:id="@+id/legislator_start_term"
                    android:layout_gravity="right"
                    android:padding="3dip" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:padding="3dip"
                    android:text="@string/endterm"
                    android:textColor="@android:color/black"
                    android:textStyle="normal|bold" />

                <TextView
                    android:id="@+id/legislator_end_term"
                    android:layout_gravity="right"
                    android:padding="3dip" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:padding="3dip"
                    android:text="@string/term"
                    android:textColor="@android:color/black"
                    android:textStyle="normal|bold" />

                <RelativeLayout>

                    <ProgressBar
                        style="@android:style/Widget.ProgressBar.Horizontal"
                        android:id="@+id/progbar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentStart="true" />

                    <TextView
                        android:text="TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true"
                        android:id="@+id/percentage_text"
                        android:textColor="@android:color/black" />

                </RelativeLayout>


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:padding="3dip"
                    android:text="@string/office"
                    android:textColor="@android:color/black"
                    android:textStyle="normal|bold" />

                <TextView
                    android:id="@+id/legislator_office"
                    android:layout_gravity="right"
                    android:padding="3dip" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:padding="3dip"
                    android:text="@string/state"
                    android:textColor="@android:color/black"
                    android:textStyle="normal|bold" />

                <TextView
                    android:id="@+id/legislator_state"
                    android:layout_gravity="right"
                    android:padding="3dip" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:padding="3dip"
                    android:text="@string/fax"
                    android:textColor="@android:color/black"
                    android:textStyle="normal|bold" />

                <TextView
                    android:id="@+id/legislator_fax"
                    android:layout_gravity="right"
                    android:padding="3dip" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:padding="3dip"
                    android:text="@string/birthday"
                    android:textColor="@android:color/black"
                    android:textStyle="normal|bold" />

                <TextView
                    android:id="@+id/legislator_birthday"
                    android:layout_gravity="right"
                    android:padding="3dip" />
            </TableRow>
        </TableLayout>
    </RelativeLayout>
</ScrollView>